--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.container{
+  /* display: flex; */
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  position: absolute;
+  left: 300px;
+  /* background-color: aqua; */
+
+
+}
+
+
+.output{
+  padding: 10px;
+  width: 300px;
+  background-color: black;
   color: white;
-}
+  font-size: 40px;
+  font-weight: 100px;
+  text-align: right;
+  
 
-.App-link {
-  color: #61dafb;
 }
+.keyboard{
+  /* display: inline; */
+  justify-content: space-between;
+  
+}
+.digit,button{
+  padding: 30px;
+  width: 80px;
+  border: 2px black solid;
+  background-color: rgb(112,3,5);
+  font-size: 25px;
+  cursor: pointer;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.operator{
+  padding: 30px;
+  width: 80px;
+background-color: rgb(198, 231, 166);
+  border: 2px black solid;
+  font-size: 25px;
+}
+button {
+  /* cursor: pointer; */
+  /* background-color: antiquewhite; */
+}
+.fun-key{
+  background-color: rgb(198, 231, 166);
+
 }
